dynamic german names
-added dynamic names for Germany depending on who forms it.
-added variables to the German states so I can know who formed Germany
-added flag definition for unique flag for Germany depending on who forms it

TODO: add new COA for Germany depending on who formed it

--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -202,6 +202,11 @@
  dyn_c_english_lords: "English Lords"
  dyn_c_english_lords_adj: "English"
 
+ dyn_c_deutschland_germany_name: "Deutschland"
+ dyn_c_germania_germany_name: "Germania"
+ dyn_c_alemanni_germany_name: "Alemannia"
+ dyn_c_lotharingia_germany_name: "Lotharingia"
+
 
  #Decentralized nations
   #Africa
