--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -4,7 +4,7 @@
  #purple Purples#!
  romaioi_startup_events.1.t: "Welcome to Basileía Romaíon"
  romaioi_startup_events.1.d: "Welcome to Basileía Romaíon - A Sprawling Alt-History Odyssey!"
- romaioi_startup_events.1.f: "Welcome to an alternative world one hundred years earlier than base Victoria 3 where many divergent events led to a drastically different world. Primarily inspired by Roman, Medieval and Renaissance History. Join our #blue Discord#! community, show your support by rating us on #gold Steam#! and #gold PDX mods#!, and consider contributing on #green Patreon.com/romaioi#! or #green BuyMeACoffee.com/romaioi#!. Thank you, and may you thoroughly enjoy the journey ahead."
+ romaioi_startup_events.1.f: "Welcome to an alternative world one hundred years earlier than base Victoria 3 where many divergent events led to a drastically different world. Primarily inspired by Roman, Medieval and Renaissance History. Join our #blue Discord#! community, show your support by rating us on #gold Steam#! and #gold PDX mods#!, and consider contributing on #green Patreon.com/romaioi#! or #green BuyMeACoffee.com/romaioi#!."
  romaioi_startup_events.1.a: "Play the Game."
  romaioi_startup_events.1.b: "Tell me the Lore.(WIP)"
  romaioi_startup_events.1.c: "Support development."
@@ -17,7 +17,7 @@
 
  romaioi_startup_events.3.t: "Support the development of Basileía Romaíon"
  romaioi_startup_events.3.d: "Support the development of Basileía Romaíon"
- romaioi_startup_events.3.f: "I'm deeply passionate about Roman history, particularly the often overlooked medieval Roman Empire, known as Basileia Romaion. As a dedicated modder, I combine my love for history with the creative potential of Victoria 3 Modding. Creating this alt-history world is a labor of love, and your support is vital. You can back me at #green www.buymeacoffee.com/Romaioi#! Or, consider Becoming a Patron at #green www.patreon.com/romaioi#! for exclusive insights and early access. Your support ensures continuous development of this labor of love. Join me in crafting captivating alt-history narratives and keeping the flames of Basileía Romaíon alive in the digital world. Thank you for being a part of this journey. Warm regards, Drogan"
+ romaioi_startup_events.3.f: "We are deeply passionate about history, especially the often-overlooked medieval Roman Empire, Basileía Romaíon. As dedicated modders, we bring our love for history to life through the creative potential of Victoria 3 modding. Crafting this alternate-history world is a true labor of love, and your support is essential to its growth. You can back our work at #green www.buymeacoffee.com/Romaioi#! or consider becoming a Patron at #green www.patreon.com/romaioi#! If you're interested in contributing your skills, we invite you to join our development team! Message Drogan on Discord to learn more about how you can help make Basileía Romaíon even better. Together, we can shape an epic alternate-history experience and bring the world of Basileía Romaíon to life.  Mod Team: Creator: Drogan, Developers: Smekens, skjargh(on hiatus), Creative Support: Jozue, Special Thanks: To everyone who has contributed, from reporting bugs to providing feedback, suggestions, and ideas. Your support has been invaluable! "
  romaioi_startup_events.3.a: "Play the Game."
 
  #serbia_rebellion.1.t: "Serbian Exarchate declares independence"
