--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -359,9 +359,9 @@
  STATE_NIGERIA: "Nigeria"
  STATE_EAST_HAUSALAND: "East Hausaland"
  STATE_KATANGA: "Katanga"
- STATE_CONGO_ORIENTALE: "Congo Orientale"
+ STATE_CONGO_ORIENTALE: "Lualaba" # Congo Orientale
  STATE_KASAI: "Kasai"
- STATE_BAS_CONGO: "Bas-Congo"
+ STATE_BAS_CONGO: "Lower Congo"
  STATE_EQUATEUR: "Equateur"
  STATE_UGANDA: "Uganda"
  STATE_EQUATORIA: "Equatoria"
@@ -466,8 +466,8 @@
  STATE_SICHUAN: "Sichuan"
  STATE_YUNNAN: "Yunnan"
  STATE_GUIZHOU: "Guizhou"
- STATE_SHAOZHOU: "Shaozhou"
- STATE_HINGGAN: "Monan"
+ STATE_SHAOZHOU: "Eastern Guangdong"
+ STATE_HINGGAN: "Inner Mongolia"
  STATE_ALXA: "Alxa"
  STATE_GUANGXI: "Guangxi"
  STATE_SOUTHERN_MANCHURIA: "Southern Manchuria"
@@ -475,12 +475,12 @@
  STATE_SHANDONG: "Shandong"
  STATE_BEIJING: "Beijing"
  STATE_SHANXI: "Shanxi"
- STATE_XIAN: "Xi'an"
+ STATE_XIAN: "Xi’an"
  STATE_NINGXIA: "Ningxia"
  STATE_GANSU: "Gansu"
  STATE_QINGHAI: "Qinghai"
  STATE_CHONGQING: "Chongqing"
- STATE_GUANGDONG: "Guangdong"
+ STATE_GUANGDONG: "Western Guangdong"
  STATE_FUJIAN: "Fujian"
  STATE_ZHEJIANG: "Zhejiang"
  STATE_SUZHOU: "Suzhou"
@@ -502,7 +502,7 @@
  STATE_EAST_KARELIA: "East Karelia"
  STATE_ARKHANGELSK: "Arkhangelsk"
  STATE_TARTARIA: "Sarai"
- STATE_OUTER_MANCHURIA: "Primorye"
+ STATE_OUTER_MANCHURIA: "North Jilin"
  STATE_UZBEKIA: "Uzbekia"
  STATE_KHIVA: "Chorasmia"
  STATE_TAJIKISTAN: "Tajikistan"
@@ -761,7 +761,7 @@
  STATE_ALTAI: "Altai"
  STATE_BURYATIA: "Buryatia"
  STATE_KOLYMA: "Kolyma"
- STATE_AMUR: "Amur"
+ STATE_AMUR: "North Heilongjiang"
  STATE_CHELYABINSK: "Chelyabinsk"
  STATE_KUOPIO: "Kuopio"
  STATE_OULU: "Oulu"
