companies & 	- Added new companies to FLA,Net and added company logos to most of the mods custom companies 	- added new religion and cultural dicrimination traits
	- Added new companies to FLA,Net and added company logos to most of the mods custom companies
	- added new religion and cultural discrimination traits

--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -49,3 +49,7 @@
  #greek:1 "Romaíoi" 
  #romanian: "Vlach"
  #sudanese: "Nubian"
+
+ #Discrimination traits
+ greco_roman_heritage: "Romaiokratía"
+ greek_culture: "Hellenophone"
