--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -147,6 +147,8 @@
  company_ven_arsenal: "Venice Arsenal"
  company_gen_trade: "Genoa Trade League"
  company_gen_arsenal: "Genoa Arsenal"
+ company_fla_trade: "Ostend Company"
+ company_net_trade: "Vereenigde Oostindische Compagnie"
 
  #State Regions
 
