--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
  #Modifiers 
+
+ #ERE
  br_modifier_latin_privileges: "Latin Trade Privileges"
  br_modifier_anti_latin_policies: "Anti Latin Trade Policies"
  br_modifier_romaioi_culture_supremacy: "Romaíon Cultural Supremacy"
@@ -11,40 +13,88 @@
  br_modifier_tagmata_primacy: "Tagmata Primacy"
  br_modifier_themata_primacy: "Themata Primacy"
  br_modifier_varangian_primacy: "Varangian Primacy"
- br_modifier_colonial_subsidies: "Colonial Subsidies"
- br_modifier_colonial_ferver: "Colonial Ferver"
- br_modifier_religious_chaos: "Religious Chaos"
- br_modifier_jihad_called: "Jihad Called"
- br_modifier_decentralized_khanate: "Decentralized Khanate"
- br_modifier_merchant_republic: "Merchant State"
- br_modifier_arab_caliphate: "Abbasid Caliphate"
- br_modifier_ecumenical_patriarch: "Ecumenical Patriarch"
- br_modifier_pope: "Patriarch of Rome"
- br_modifier_patriarch_alexandria: "Patriarch Alexandria"
- br_modifier_patriarch_jerusalem: "Patriarch Jerusalem"
- br_modifier_patriarch_antioch: "Patriarch Antioch"
- br_modifier_holy_roman_emperor: "Imperator Romanorum"
- br_modifier_noble_privileges: "Noble Privileges"
+ br_modifier_roman_senate: "Synkletos"
+ br_modifier_corrupt_pronoia: "Thematic deterioration"
+ br_modifier_reformed_pronoia: "Pronoia"
+ br_modifier_romaioi_fallen_eagle: "Fallen Eagle" 
+ br_modifier_exarchate: "Exarchate"
+ romaioi_military_reorganization: "Military Reorganization"
  br_modifier_eastern_roman_emperor: "Basileus Romaíon"
- br_modifier_mandate_of_heaven: "Mandate of Heaven"
- br_modifier_vive_la_revolution: "Vive la Révolution"
- br_modifier_nomad_heritage: "Nomadic Heritage"
- ig_influence_modifier: "BR Influence Modifier"
- br_modifier_spice_trade: "Spice Trade"
- br_modifier_hajj: "Hajj"
- br_modifier_holy_warriors: "Holy Warriors"
- br_modifier_tribal_warriors: "Tribal Warriors"
- br_modifier_boyars: "Boyars"
- br_modifier_cossacks: "Cossacks"
- br_modifier_tithe: "Papal Tithe"
- br_modifier_persian_emperor: "Shah of Shahs"
- br_modifier_persian_satraps: "Satrapies"
- br_modifier_religious_tolerance: "Religious Tolerance"
+ br_modifier_roman_roads: "Romaíon Infrastructure"
+
+ br_modifier_muslim_cultural_discrimination: "Muslim Oppression"
+ br_modifier_slavic_cultural_discrimination: "Slavic Oppression"
+
+ #IG
+ ig_influence_modifier: "Influence Bonus"
+ ig_attraction_modifier: "Attraction Bonus"
+
+ #Generic/ To Sort
+ br_modifier_power_bloc_bonus: "Power Bloc Leader"
  br_modifier_defensive_mod: "Defensive Preparations"
- br_modifier_inward_perfection: "Inward Perfection"
- subservient_patriarch: "Subservient Patriarch"
  triumph_of_a_general: "Triumph of a General"
  br_modifier_tribal_resistance: "Organized Native Resistance"
+ br_modifier_corporate_reforms: "Corporate Reforms"
+ br_modifier_regional_unification: "Unified Region"
+ br_modifier_anti_colonialism: "Anti-Colonialism"
+ br_modifier_defensive_bonus: "Defensive Military"
+ br_modifier_aggressive_bonus: "Aggressive Military"
+
+ #Colonial
+ br_modifier_elysium: "Elysium"
+ br_modifier_new_world_colony: "New World Colony"
+ br_modifier_african_colony: "African Colony"
+ br_modifier_colonial_subsidies: "Colonial Subsidies"
+ br_modifier_autonomous_march: "Autonomous March"
+ br_modifier_independent_new_world_colony: "Independent Colony"
+ br_modifier_spice_trade: "Spice Trade"
+
+ #North Sea/ Baltic
+ br_modifier_norse_military_doctrine_2: "Reformerade Svenska Armén"
+ baltic_toll_collection_rights: "Toll Collection Rights"
+ br_modifier_naval_tradition: "Naval Tradition"
+ br_modifier_norse_competitive_traders: "Northern Trade Dominance "
+ br_modifier_norse_military_doctrine: "Norse Military Doctrine"
+
+ # Tataria/Horde
+ br_modifier_decentralized_khanate: "Decentralized Khanate"
+ end_latin_privileges_TAT: "End Latin Trade Privileges"
+ end_latin_privileges_TAT_desc: "The Latins have enjoyed an unfair monopoly on our trade for too long."
+ br_modifier_horde_slavic_oppression: "Slavic Oppression"
+ br_modifier_horde_legacy_of_the_khan: "Mongol Preference"
+ br_modifier_horde_khanate: "Khanate"
+ br_modifier_horde_reactionary_social_policies: "Reactionary Social Policies"
+ br_modifier_horde_army_prowess: "Army Prowess"
+ br_modifier_nomad_heritage: "Nomadic Heritage"
+ br_steppe_colonial_expansion: "Steppe Expansion"
+ br_modifier_religious_tolerance: "Religious Tolerance"
+
+ #Persia
+ br_modifier_persian_emperor: "Shah of Shahs"
+ br_modifier_persian_satraps: "Satrapies"
+ br_modifier_persian_cultural_promotion: "Persian Cultural Promotion"
+ br_persia_defensive_military_posture: "Defensive Military Posture"
+ br_modifier_silk_road: "Silk Road"
+
+ # Italy/ Republics
+ br_modifier_diplomatic_missions: "Diplomatic Missions"
+ br_modifier_italy_academia: "Italian Academia"
+ br_modifier_italy_accessible_stock_exchanges: "Accessible Stock Exchanges"
+ br_modifier_italy_colonial_dividends: "Colonial Dividends"
+ br_modifier_italy_gunboat_trade_diplomacy: "Gunboat Diplomacy"
+ br_modifier_italy_venetian_arsenal: "Venetian Arsenal"
+ br_modifier_merchant_republic: "Merchant State"
+ br_modifier_colonial_merchant_republic: "Merchant Republic"
+ br_modifier_mediterranean_merchant_republic: "Merchant Republic"
+
+
+ #PLC-RUS
+ br_modifier_liberum_veto: "Liberum Veto"
+ br_modifier_piotrkow_statutes: "Piotrkow Statutes"
+ br_modifier_russia_buff_1: "Rus"
+ br_modifier_russia_buff_2: "Rus"
+ br_modifier_boyars: "Boyars"
+ br_modifier_cossacks: "Cossacks"
  br_modifier_fur_trade: "Fur Trade"
  br_modifier_golden_liberty: "Golden Liberty"
  br_modifier_eastern_slavery: "Eastern Slavery"
@@ -52,71 +102,6 @@
  br_modifier_noble_democracy: "Noble Democracy"
  br_modifier_magnate_oligarchy: "Magnate Oligarchy"
  br_modifier_slave_to_liberty: "Slave To Liberty"
- # diplomatic_plays_blocked_until_golden_liberty: "#BOLD Diplomatic plays blocked#! until #BOLD Golden Liberty#! Journal Entry is resolved"
- br_modifier_insufficient_infrastructure: "Insufficient Infrastructure"
- br_modifier_rampant_corruption: "Rampant Corruption"
- br_modifier_china_political_turmoil: "Peasant Resistance"
- br_modifier_naval_tradition: "Naval Tradition"
- br_modifier_norse_competitive_traders: "Northern Trade Dominance "
- br_modifier_norse_military_doctrine: "Norse Military Doctrine"
- br_modifier_japan_shogunate: "Shogunate"
- br_modifier_japan_military_tradition: "Samurai Tradition"
- br_modifier_japan_pacific_trade: "Pacific Trade Dominance"
- br_modifier_porcelain_modifier: "Productive Porcelain Industry"
- br_modifier_corporate_reforms: "Corporate Reforms"
- br_modifier_persian_cultural_promotion: "Persian Cultural Promotion"
- br_persia_defensive_military_posture: "Defensive Military Posture"
- br_modifier_roman_roads: "Romaíon Infrastructure"
- br_modifier_regional_unification: "Unified Region"
- br_modifier_anti_colonialism: "Anti-Colonialism"
- br_modifier_andalusian_discrimination: "Andalusian Discrimination"
- br_modifier_andalusian_caliphate: "Caliphate"
- br_modifier_andalusian_conscription: "Improved Conscription"
- br_modifier_muslim_cultural_discrimination: "Muslim Oppression"
- br_modifier_slavic_cultural_discrimination: "Slavic Oppression"
- br_modifier_colonial_merchant_republic: "Merchant Republic"
- br_modifier_mediterranean_merchant_republic: "Merchant Republic"
- br_modifier_silk_road: "Silk Road"
- br_modifier_sahara_trade: "Trans-Sahara Trade Route"
- br_modifier_defensive_bonus: "Defensive Military"
- br_modifier_aggressive_bonus: "Aggressive Military"
- br_modifier_elysium: "Elysium"
- br_modifier_new_world_colony: "New World Colony"
- br_modifier_african_colony: "African Colony"
- br_modifier_desert_culture: "Desert Culture"
- br_modifier_power_bloc_bonus: "Power Bloc Leader"
- br_modifier_autonomous_march: "Autonomous March"
- br_modifier_exarchate: "Exarchate"
- romaioi_military_reorganization: "Military Reorganization"
- br_modifier_independent_new_world_colony: "Independent Colony"
- br_steppe_colonial_expansion: "Steppe Expansion"
- br_modifier_norse_military_doctrine_2: "Reformerade Svenska Armén"
- baltic_toll_collection_rights: "Toll Collection Rights"
-
- # Tataria
- end_latin_privileges_TAT: "End Latin Trade Privileges"
- end_latin_privileges_TAT_desc: "The Latins have enjoyed an unfair monopoly on our trade for too long."
-
- # Horde
- br_modifier_horde_slavic_oppression: "Slavic Oppression"
- br_modifier_horde_legacy_of_the_khan: "Mongol Preference"
- br_modifier_horde_khanate: "Khanate"
- br_modifier_horde_reactionary_social_policies: "Reactionary Social Policies"
- br_modifier_horde_army_prowess: "Army Prowess"
-
- # Italy
- br_modifier_diplomatic_missions: "Diplomatic Missions"
- br_modifier_italy_academia: "Italian Academia"
- br_modifier_italy_accessible_stock_exchanges: "Accessible Stock Exchanges"
- br_modifier_italy_colonial_dividends: "Colonial Dividends"
- br_modifier_italy_gunboat_trade_diplomacy: "Gunboat Diplomacy"
- br_modifier_italy_venetian_arsenal: "Venetian Arsenal"
-
- #PLC-RUS
- br_modifier_liberum_veto: "Liberum Veto"
- br_modifier_piotrkow_statutes: "Piotrkow Statutes"
- br_modifier_russia_buff_1: "Rus"
- br_modifier_russia_buff_2: "Rus"
 
  #HRE
  br_modifier_peoples_monarchy: "The People’s Monarchy"
@@ -126,27 +111,61 @@
  br_modifier_enforced_franconization: "Enforced Franconization"
  br_modifier_senatus_populusque_romanus: "Senatus Populusque Romanus"
  br_modifier_the_holy_see: "The Holy See"
+ br_modifier_holy_roman_emperor: "Imperator Romanorum"
+ br_modifier_noble_privileges: "Noble Privileges"
+ br_modifier_vive_la_revolution: "Vive la Révolution"
+ br_modifier_feudalism: "Feudalism"
 
  #FLA
  br_modifier_french_elite: "French Elite"
  br_modifier_french_elite_desc: "The majority of the aristocratic elites in this country are French."
-
  br_modifier_hre_intrests: "HRE Intrests"
  br_modifier_hre_intrests_desc: "We have an intrest in the territory of the HRE"
-
  br_modifier_princely_league_region_intrests: "Princely League region intrests"
  br_modifier_princely_league_region_intrests_desc: "We have an intrest in all regions who have a concern in joining the Princely League"
-
  br_modifier_princely_league: "Princely League"
-
  br_modifier_princely_league_leader: "Princely League Leader"
 
+ #Arab/Muslim/Africa
+ br_modifier_desert_culture: "Desert Culture"
+ br_modifier_arab_caliphate: "Abbasid Caliphate"
+ br_modifier_andalusian_discrimination: "Andalusian Discrimination"
+ br_modifier_andalusian_caliphate: "Caliphate"
+ br_modifier_andalusian_conscription: "Improved Conscription"
+ br_modifier_hajj: "Hajj"
+ br_modifier_holy_warriors: "Holy Warriors"
+ br_modifier_tribal_warriors: "Tribal Warriors"
+ br_modifier_sahara_trade: "Trans-Sahara Trade Route"
+
+ #China/Asia and India
+ br_modifier_mandate_of_heaven: "Mandate of Heaven"
+ br_modifier_insufficient_infrastructure: "Insufficient Infrastructure"
+ br_modifier_rampant_corruption: "Rampant Corruption"
+ br_modifier_china_political_turmoil: "Peasant Resistance"
+ br_modifier_inward_perfection: "Inward Perfection"
+ br_maratha_modifier: "Maratha Confederation"
+ 
  #JAP
  br_modifier_edo_class_system: "Edo Social Class System"
  br_modifier_edo_society_ig: "Edo Society"
+ br_modifier_japan_shogunate: "Shogunate"
+ br_modifier_japan_military_tradition: "Samurai Tradition"
+ br_modifier_japan_pacific_trade: "Pacific Trade Dominance"
+ br_modifier_porcelain_modifier: "Productive Porcelain Industry"
 
+ #Religion
+ br_modifier_tithe: "Papal Tithe"
+ br_modifier_ecumenical_patriarch: "Ecumenical Patriarch"
+ br_modifier_pope: "Patriarch of Rome"
+ br_modifier_patriarch_alexandria: "Patriarch Alexandria"
+ br_modifier_patriarch_jerusalem: "Patriarch Jerusalem"
+ br_modifier_patriarch_antioch: "Patriarch Antioch"
+ br_modifier_colonial_ferver: "Colonial Ferver"
+ br_modifier_religious_chaos: "Religious Chaos"
+ br_modifier_jihad_called: "Jihad Called"
  modifier_restored_pentarchy: "Restored Pentarchy"
  modifier_restored_pentarchy_desc: "Restored Pentarchy"
+ subservient_patriarch: "Subservient Patriarch"
  modifier_nomos_empsychos: "Nomos Empsychos"
  modifier_nomos_empsychos_desc: "Nomos Empsychos"
  modifier_redneck_emperor: "Chariot Racer"
@@ -172,10 +191,6 @@
  autocephalous_patriarchate_assyria: "Assyrian Church"
  autocephalous_patriarchate_assyria_desc: "Assyrian Church"
 
- br_modifier_roman_senate: "Synkletos"
- br_modifier_corrupt_pronoia: "Thematic deterioration"
- br_modifier_reformed_pronoia: "Pronoia"
- br_modifier_romaioi_fallen_eagle: "Fallen Eagle" 
 
  #country_influence_per_subject_add: "$country_influence_per_subject_add$"
  #country_influence_per_subject_desc: "$country_influence_per_subject_add_desc$"
@@ -188,7 +203,7 @@
  country_prestige_per_subject_add_desc: "The amount of @aut![Nbsp][concept_prestige] which is scaled by the number of [Concept('concept_subject', '$concept_subjects$')]"
  
 
- br_modifier_feudalism: "Feudalism"
+
 
 
  # State modifiers
