--- a/localization/english/br_religion_l_english.yml
+++ b/localization/english/br_religion_l_english.yml
@@ -24,6 +24,8 @@
  #Discrimination
  new_world_pagan: "New World Pagan"
  pantheon: "Pantheon"
+ eastern_abrahamic: "Abrahamic East"
+ western_abrahamic: "Abrahamic West"
 
  ig_baltic_priests: "Kriwe"
  ig_baltic_priests_desc: "The Reformed Baltic Priesthood is doing its best job at maintaining unity between the people and state."
