--- a/localization/english/eocfm_l_english.yml
+++ b/localization/english/eocfm_l_english.yml
@@ -34,7 +34,7 @@
  eocfm_convoke_council_tt1: "There have been less than #variable 4#! councils."
  eocfm_convoke_council_tt2: "There is a #tooltippable #tooltip:[GetRawTextTooltipTag('je_eocfm_convoke_council_tt')] Theologial Matter#!#! calling the Church's attention."
  eocfm_convoke_council_tt3: "An Ecumenical Council is not currently being held."
- je_eocfm_convoke_council_tt: "•Reply to the Epistle to the Easterners (requires #yellow Mass Communication#!).\n•Settle the issue of Phyletism (requires #yellow Nationalism#!).\n•Reform the Julian Calendar (requires #yellow Central Planning#!).\n•Revive the [Concept('concept_crusades','$concept_crusades$')] (must have #bold Restored the Byzantine Empire#!)."
+ je_eocfm_convoke_council_tt: "•Reply to the Epistle to the Easterners (requires #yellow Mass Communication#!).\n•Settle the issue of Phyletism (requires #yellow Nationalism#!).\n•Reform the Julian Calendar (requires #yellow Central Planning#!).\n•Revive the [Concept('concept_crusades','$concept_crusades$')] (must have #bold Restored Basileía Romaíon#!)."
  
  eocfm_need_100_tt: "Has #blue 100#! @eocfm_caesaropapism! [concept_caesaropapism]."
  eocfm_need_200_tt: "Has #blue 200#! @eocfm_caesaropapism! [concept_caesaropapism]."
@@ -650,7 +650,7 @@
  eocfm_gui_autocephaly_progress_amount: "TODO"
  eocfm_gui_autocephaly_progress_tt: "TODO"
  
- eocfm_gui_secure_tetrarchy_tt: "Under the auspices of the Byzantine state, the Ancient Patriarchates existed in a unified structure to administer the ecclesiarcy and shephard the faithful. Should we secure control over these holy nexuses of the faith, we will be able to reunify the old heart of the Eastern Orthodoxy.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
+ eocfm_gui_secure_tetrarchy_tt: "Under the auspices of the Basileía Romaíon, the Ancient Patriarchates existed in a unified structure to administer the ecclesiarcy and shephard the faithful. Should we secure control over these holy nexuses of the faith, we will be able to reunify the old heart of the Eastern Orthodoxy.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
  eocfm_gui_secure_tetrarchy_tt2: "Own and Control the Ancient Seats of #yellow Constantinople#!, #yellow Antioch#!, #yellow Jerusalem#!, and #yellow Alexandria#!."
  eocfm_gui_secure_pentarchy_tt: "The Pentarchy, consisting of the Eastern seats plus Rome, once ruled over the unitied Christian church before the Germanic invaders tore Rome away from the Empire for their political aspirations. If we can secure control over the Enternal City, we will be able to unify the Eastern and Western Patriarchates after almost a millenium of estrangment.\n$TOOLTIP_DELIMITER$\n[ScriptedGui.BuildTooltip( GuiScope.SetRoot( GetPlayer.MakeScope ).End )]"
  eocfm_gui_secure_pentarchy_tt2: "Own and Control the Ancient Seats of #yellow Rome#!, #yellow Constantinople#!, #yellow Antioch#!, #yellow Jerusalem#!, and #yellow Alexandria#!."
