--- a/localization/english/eocfm_events_l_english.yml
+++ b/localization/english/eocfm_events_l_english.yml
@@ -1,10 +1,10 @@
 ﻿l_english:
  # events
  eocfm.001.t: "The Bishops of the East"
- eocfm.001.d: "As the world enters a new age, scholars and state leaders have begun to debate the role of the [ROOT.GetCountry.GetStateReligion.GetName] Church within the state. Some push for full state control of the Church, like the Byzantines and Russians, while others advocate a more hands-off approach, with fears that such influence might invite a new form of oppression like that of the Ottomans."
+ eocfm.001.d: "As the world enters a new age, scholars and state leaders have begun to debate the role of the [ROOT.GetCountry.GetStateReligion.GetName] Church within the state. Some push for full state control of the Church, like the Basileía Romaíon and Russians, while others advocate a more hands-off approach, with fears that such influence might invite a new form of oppression."
  eocfm.001.f: "The Eastern Orthodox traditon has diverged heavily from the Roman Catholic tradition in the West. Having rejected the primacy of Rome in Church affairs, the Orthodox Church is led by five Partiarchs, four at the Ancient Seats of Constantinople, Antioch, Alexandria, and Jerusalem, with a fifth seated in Moscow. However, with the rise of Nationalism, states have sought increased control over ecclesiastical affairs."
  eocfm.001.a: "God willing, we will prevail."
- eocfm.002.t: "The Millet-i Rûm"
+ eocfm.002.t: "" #The Millet-i Rûm 
  eocfm.002.d: ""
  eocfm.002.f: ""
  eocfm.002.a: ""
@@ -13,9 +13,9 @@
  eocfm.003.f: "Historical Note: Almost immediately after taking the throne, the regency council unilaterally declared the church in Greece to be autocephalous, considering the Ecumenical Patriarch in Constantinople to be little more than a pawn of the Sultan. This would be the first of many unilateral moves by national churches to break away from Constantinople as a method of asserting their national identity and insulating themselves from meddling by the Ottoman state."
  eocfm.003.a: "We are an Orthodox nation."
  eocfm.004.t: "The Most Holy Synod"
- eocfm.004.d: "The Eastern Orthodox Church of [ROOT.GetCountry.GetName] has grown to become the largest and most influential of the Patriarchates of the Eastern Church. With a jurisdiction that now reaches from the banks of the Black Sea in Europe to the Yukon Mountains in North America, Russian Emperors have sought to dominate the Orthodox Church."
- eocfm.004.f: "Historical note: In the centuries following the Fall of Constantinople, several political and relgious leaders have argued that Moscow is the successor to the Roman Empire and thus the one true leader of the Christian World. While this has remained unrecognized in this role by other Patriarchs and Christianity at large, Emperors have this to assert influence over Orthodox Christians. In 1774, the Treaty of Küçük Kaynarca gave Russia nominal control over the Greek Orthodox communities in the Ottoman Empire, and Nicholas I would spend much of his rule asserting Russian primacy in Eastern Orthodox affairs across the Ottoman state."
- eocfm.004.a: ""Oriental affairs are above all a matter for Russia.""
+ eocfm.004.d: "The Eastern Orthodox Church of [ROOT.GetCountry.GetName] has grown to become one of the largest and most influential of the Patriarchates of the Eastern Church."
+ eocfm.004.f: "Historical note: Basil II, of Basileía Romaíon, encouraged Vladimir I to convert to Christianity, offering a marriage alliance with his sister, Anna. Vladimir, ruling Kievan Rus' from 980 to 1015, is renowned for Christianizing the territory. Despite early pagan traditions, Vladimir's envoys found Orthodox Christianity in Constantinople particularly compelling. Negotiations led to Vladimir's baptism and marriage to Anna in 988, solidifying the region's Christian faith and political alliance with Basileía Romaíon. Upon returning to Kiev, Vladimir baptized his family and the people, marking a significant religious transformation known as the Baptism of the Rus"
+ eocfm.004.a: ""Oriental affairs are above all a matter for all Russia.""
 
  eocfm.010.t: "Ecumenical Reforms"
  eocfm.010.d: "The Eastern Orthodox Church is the one true successor to the Great Church founded by Jesus Christ. Yet, with its decentralized structure, deviations have developed between the various churches over the centuries. A cohort of bishops have requested state support in implementing some liturgical changes in the interest of better aligning ourselves with the rest of the Orthodox family."
@@ -103,7 +103,7 @@
  eocfm.030.b: "We should show mercy."
  eocfm.031.t: "Church-State Relations"
  eocfm.031.d: "While the Church of [ROOT.GetCountry.GetName] has been a vital pillar of our cultural identity, senior clergymen have suggested that the inclusion of state-appointed priests is diluting the holiness of the Church."
- eocfm.031.f: "Historical Note: Dating back to Byzantine times, many positions within Church leadership were appointed by the state. This practice was additionally normalized under both Turkish and Russian rule. However, this practice often risked damaging the credibility of the clergy and kept the Church open to political meddling."
+ eocfm.031.f: "Historical Note: Dating back to antiquity, many positions within Church leadership were appointed by the state. This practice was additionally normalized under both Romaíon and Russian rule. However, this practice often risked damaging the credibility of the clergy and kept the Church open to political meddling."
  eocfm.031.a: "Let the Church be."
  eocfm.031.b: "The State will have primacy."
  
@@ -160,7 +160,7 @@
  eocfm.110.b: "This is a breach of divine order."
  eocfm.111.t: "Constantinopole Usurped by [SCOPE.sCountry('eocfm_usurper_scope').GetName]"
  eocfm.111.d: "In an arrogant assertion of their authority, [SCOPE.sCountry('eocfm_usurper_scope').GetName] has cemented their control over the Ecumenical Patriarchate of Constantinople. The previous administration has been deposed and replaced with one more amenable to their new overlords."
- eocfm.111.f: "While nominally separate from the government, the various patriarchal seats have been subject to heavy state influence as far back as the time of the Roman Empire continuing into the Byzantine, Arab, and Ottoman regimes."
+ eocfm.111.f: "While nominally separate from the government, the various patriarchal seats have been subject to heavy state influence as far back as antiquity continuing into the current age."
  eocfm.111.a: "So be it."
  eocfm.112.t: "Usurper Claims Antioch"
  eocfm.112.d: "Having seized control of the city of Damascus, [SCOPE.sCountry('eocfm_usurper_scope').GetName] has claimed direct control over the ecclesiastic apparatus of the Patriarchate of Antioch."
@@ -169,7 +169,7 @@
  eocfm.112.b: "This is a breach of divine order."
  eocfm.113.t: "Antioch Usurped by [SCOPE.sCountry('eocfm_usurper_scope').GetName]"
  eocfm.113.d: "In an arrogant assertion of their authority, [SCOPE.sCountry('eocfm_usurper_scope').GetName] has cemented their control over the Patriarchate of Antioch. The previous administration has been deposed and replaced with one more amenable to their new overlords."
- eocfm.113.f: "While nominally separate from the government, the various patriarchal seats have been subject to heavy state influence as far back as the time of the Roman Empire continuing into the Byzantine, Arab, and Ottoman regimes."
+ eocfm.113.f: "While nominally separate from the government, the various patriarchal seats have been subject to heavy state influence as far back as antiquity continuing into the current age."
  eocfm.113.a: "So be it."
  eocfm.114.t: "Usurper Claims Jerusalem"
  eocfm.114.d: "Having seized control of the Holy City of Jersusalem, [SCOPE.sCountry('eocfm_usurper_scope').GetName] has claimed direct control over the ecclesiastic apparatus of the Patriarchate of Jersusalem."
@@ -178,7 +178,7 @@
  eocfm.114.b: "This is a breach of divine order."
  eocfm.115.t: "Jerusalem Usurped by [SCOPE.sCountry('eocfm_usurper_scope').GetName]"
  eocfm.115.d: "In an arrogant assertion of their authority, [SCOPE.sCountry('eocfm_usurper_scope').GetName] has cemented their control over the Holy City of Jersusalem. The previous administration has been deposed and replaced with one more amenable to their new overlords."
- eocfm.115.f: "While nominally separate from the government, the various patriarchal seats have been subject to heavy state influence as far back as the time of the Roman Empire continuing into the Byzantine, Arab, and Ottoman regimes."
+ eocfm.115.f: "While nominally separate from the government, the various patriarchal seats have been subject to heavy state influence as far back as antiquity continuing into the current age."
  eocfm.115.a: "So be it."
  eocfm.116.t: "Usurper Claims Alexandria"
  eocfm.116.d: "Having seized control of the city of Alexandria, [SCOPE.sCountry('eocfm_usurper_scope').GetName] has claimed direct control over the ecclesiastic apparatus of the Patriarchate of Alexandria."
@@ -187,7 +187,7 @@
  eocfm.116.b: "This is a breach of divine order."
  eocfm.117.t: "Alexandria Usurped by [SCOPE.sCountry('eocfm_usurper_scope').GetName]"
  eocfm.117.d: "In an arrogant assertion of their authority, [SCOPE.sCountry('eocfm_usurper_scope').GetName] has cemented their control over the Patriarchate of Alexandria. The previous administration has been deposed and replaced with one more amenable to their new overlords."
- eocfm.117.f: "While nominally separate from the government, the various patriarchal seats have been subject to heavy state influence as far back as the time of the Roman Empire continuing into the Byzantine, Arab, and Ottoman regimes."
+ eocfm.117.f: "While nominally separate from the government, the various patriarchal seats have been subject to heavy state influence as far back as antiquity continuing into the current age."
  eocfm.117.a: "So be it."
  eocfm.118.t: "Usurper Claims Moscow"
  eocfm.118.d: "Having seized control of the city of Moscow, [SCOPE.sCountry('eocfm_usurper_scope').GetName] has claimed direct control over the ecclesiastic apparatus of the Patriarchate of Moscow."
@@ -197,7 +197,7 @@
  eocfm.118.c: "This is a breach of divine order."
  eocfm.119.t: "Moscow Usurped by [SCOPE.sCountry('eocfm_usurper_scope').GetName]"
  eocfm.119.d: "In an arrogant assertion of their authority, [SCOPE.sCountry('eocfm_usurper_scope').GetName] has cemented their control over the Patriarchate of Moscow. The previous administration has been deposed and replaced with one more amenable to their new overlords."
- eocfm.119.f: "While nominally separate from the government, the various patriarchal seats have been subject to heavy state influence as far back as the time of the Roman Empire continuing into the Byzantine, Arab, and Ottoman regimes."
+ eocfm.119.f: "While nominally separate from the government, the various patriarchal seats have been subject to heavy state influence as far back as antiquity continuing into the current age."
  eocfm.119.a: "So be it."
  
  eocfm.120.t: "Ecumenical Council Convoked"
@@ -409,7 +409,7 @@
  eocfm.302.t: "Nova Roma Constantinopolitana"
  eocfm.302.d: "With Anatolia and the Balkans firmly within our grasp, the old heart of the Empire has been reclaimed!"
  eocfm.302.f: "Almost one thousand years ago, Basileus Isaac I Komnenos augustly led the Empire into an era of renewed might and glory. With the old heartlands reclaimed, the heart of the Eastern Roman Empire has been restored and the seat of the Orthodox Patriarch reinstated."
- eocfm.302.a: "Hail to the Basileus! Glory to Byzantium!"
+ eocfm.302.a: "Hail to the Basileus! Glory to Basileía Romaíon!"
  eocfm.303.t: "Into the Holy Land"
  eocfm.303.d: "The ancient heartlands of the Greek people now lie in our control. Prominent voices in the [ROOT.GetCountry.GetAdjectiveNoFormatting] court call for the return of Egypt and the Levant, once strongholds of Christendom, into the Imperial Ecumene."
  eocfm.303.f: "For over two millennia, Greek culture held sway across the eastern mediterranean. Today, the old Greek cities lie in ruins and the old bastions of Christendom wither under their Muslim holders."
@@ -440,7 +440,7 @@
  
  eocfm.310.t: "The Capture of the Great Mosque"
  eocfm.310.d: "Our righteous crusades against the Saracens have brought their jewel, the heathen city of Mecca, into our grasp."
- eocfm.310.f: "One by one, rank after rank of Byzantine soldiers advanced into the city. There we beheld the Great Mosque, and at its heart the pagan relic, the al-Ḥajaru al-Aswad... the #black Black Stone#!."
+ eocfm.310.f: "One by one, rank after rank soldiers of Basileía Romaíon advanced into the city. There we beheld the Great Mosque, and at its heart the pagan relic, the al-Ḥajaru al-Aswad... the #black Black Stone#!."
  eocfm.310.a: "We bring no peace. Burn it all down."
  eocfm.310.b: "We will turn it into a museum."
  eocfm.310.c: "The Saracens kept peace in Jerusalem. We will keep peace in Mecca."
