EOC Content adjustments
- Made the EOC Content available to Oriental Orthodox and Elysian Orthodox
- Few localization changes
- Added the Byzfm modifiers because a few of them are referenced in the EOC events.
- added grefm is active trigger as its needed for the community gui mod to work.

--- a/localization/english/eocfm_events_l_english.yml
+++ b/localization/english/eocfm_events_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  # events
  eocfm.001.t: "The Bishops of the East"
- eocfm.001.d: "As the world enters a new age, scholars and state leaders have begun to debate the role of the [ROOT.GetCountry.GetStateReligion.GetName] Church within the state. Some push for full state control of the Church, like the Basileía Romaíon and Russians, while others advocate a more hands-off approach, with fears that such influence might invite a new form of oppression."
+ eocfm.001.d: "As the world enters a new age, scholars and state leaders have begun to debate the role of the [ROOT.GetCountry.GetStateReligion.GetName] Church within the state. Some push for full state control of the Church, like Basileía Romaíon and Russians, while others advocate a more hands-off approach, with fears that such influence might invite a new form of oppression."
  eocfm.001.f: "The Eastern Orthodox traditon has diverged heavily from the Roman Catholic tradition in the West. Having rejected the primacy of Rome in Church affairs, the Orthodox Church is led by five Partiarchs, four at the Ancient Seats of Constantinople, Antioch, Alexandria, and Jerusalem, with a fifth seated in Moscow. However, with the rise of Nationalism, states have sought increased control over ecclesiastical affairs."
  eocfm.001.a: "God willing, we will prevail."
  eocfm.002.t: "" #The Millet-i Rûm 
