Few more bug fixes
- Added a couple more things from EOCFM to remove errors.
- further localization tweaks

--- a/localization/english/byzfm_l_english.yml
+++ b/localization/english/byzfm_l_english.yml
@@ -1,9 +1,10 @@
-﻿l_english:
+﻿#Used in EOCFM Content
+l_english:
  # modifiers
- modifier_byzfm_rebirth: "Byzantine Rebirth"
- modifier_byzfm_rebirth_desc: "Byzantium has been reborn!"
- modifier_byzfm_restored: "Byzantine Restoration"
- modifier_byzfm_restored_desc: "Byzantium has been restored!"
+ modifier_byzfm_rebirth: "Romaíon Rebirth"
+ modifier_byzfm_rebirth_desc: "Basileía Romaíon has been reborn!"
+ modifier_byzfm_restored: "Romaíon Restoration"
+ modifier_byzfm_restored_desc: "Basileía Romaíon has been restored!"
  modifier_byzfm_glory: "Imperial Glory"
  modifier_byzfm_glory_desc: "Imperial Glory"
  modifier_byzfm_development_focus: "Development Focus"
@@ -70,3 +71,8 @@
  modifier_byzfm_imperial_industry_desc: "Imperial Industry"
  modifier_byzfm_jewel_of_the_east: "Jewel of the East"
  modifier_byzfm_jewel_of_the_east_desc: "Jewel of the East"
+
+ byzfm_weaksauce_tt: "#red This option will abandon the Roman Restoration.#!"
+
+ ODXY: "Orthodox Domain"
+ ODXY_ADJ: "Orthodox"
